--- a/q/274665.html
+++ b/q/274665.html
@@ -26,16 +26,22 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>169</td><td>Python + SymPy</td><td>240804T134410Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274669#274669">shape wa</a></td></tr>
-<tr d-ix="1"><td>157</td><td>Ruby</td><td>240806T123657Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274731#274731">G B</a></td></tr>
-<tr d-ix="2"><td>253</td><td>Julia</td><td>240806T081152Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274726#274726">Carl</a></td></tr>
-<tr d-ix="3"><td>163</td><td>JavaScript Node.js</td><td>240806T032444Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274718#274718">l4m2</a></td></tr>
-<tr d-ix="4"><td>178</td><td>JavaScript ES7</td><td>240805T201142Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274713#274713">Arnauld</a></td></tr>
+<tr d-ix="0"><td>162</td><td>JavaScript ES7</td><td>240805T201142Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274713#274713">Arnauld</a></td></tr>
+<tr d-ix="1"><td>169</td><td>Python + SymPy</td><td>240804T134410Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274669#274669">shape wa</a></td></tr>
+<tr d-ix="2"><td>157</td><td>Ruby</td><td>240806T123657Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274731#274731">G B</a></td></tr>
+<tr d-ix="3"><td>253</td><td>Julia</td><td>240806T081152Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274726#274726">Carl</a></td></tr>
+<tr d-ix="4"><td>163</td><td>JavaScript Node.js</td><td>240806T032444Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274718#274718">l4m2</a></td></tr>
 <tr d-ix="5"><td>105</td><td>Charcoal</td><td>240804T210812Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274679#274679">Neil</a></td></tr>
 <tr d-ix="6"><td>224</td><td>Picat</td><td>240805T050107Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274686#274686">Bubbler</a></td></tr>
 <tr d-ix="7"><td>024</td><td>Jelly</td><td>240804T210958Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274680#274680">Jonathan</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a> + <a href="https://www.sympy.org/en/index.html" rel="nofollow noreferrer">SymPy</a>, <s>181</s> 169 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES7), <s> 178 </s> 162 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>f=(n,g,m,...p)=&gt;-~m&gt;&gt;n?p.every((v,i)=&gt;(g=k=&gt;k&gt;v?1:v%k?g(k+1):!(p[i-1]%k)^i&lt;n-1&amp;!(p[i+1]%k)&amp;&amp;g(k,v/=k))(2))?o=p:0:(g=i=&gt;i--?g(i,m&amp;1&lt;&lt;i||f(n,0,m|1&lt;&lt;i,...p,i)):o)(n)
+</code></pre>
+<p><a href="https://tio.run/##HY5BbsMgEEX3OQVZxJqRgZosscEHqRIpSrFFsQE5EVJVt1d3Jl79mafRm/99K7fHffH5KWL6cts2GIh85DOXUmY0VvzP1sY@S1fc8gNQuCcKownGBlt6pcsp9COEWqE@Qv70Ql1OAa@@i0JVO6l3UlV0xcuHCYhwRuyTybrRpPLGeiFI4vlcqa7z6zpQi4bP63vbq9Bb1Akh4jakBSb3ZJEZplqKjrKhoa6R/R4Yu6f4SJOTUxpJw8iF2B7@thc" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a> + <a href="https://www.sympy.org/en/index.html" rel="nofollow noreferrer">SymPy</a>, <s>181</s> 169 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>lambda n:[l for l in i.permutations(range(n+1))if all((a%f&gt;0)^(c%f&gt;0)for a,b,c in zip(l,l[1:],l[2:]+(1,))for f in sympy.factorint(b)if f)][0]
 import itertools as i,sympy
 </code></pre>
@@ -72,7 +78,7 @@ def triplewise(seq):
     return zip(seq[0:], seq[1:], seq[2:])
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 157 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 157 bytes</h1>
 
 <pre class="lang-ruby prettyprint-override"><code>-&gt;n{(r=[0,0,1,8,12,158,853,11000,46988,1134848,4081198,243581246,526635830,44115776240,181186519640,p,231558565690988][n])&amp;&amp;[*0..n].permutation.find{0&gt;r-=1}}
 </code></pre>
@@ -86,24 +92,17 @@ def triplewise(seq):
 <p><a href="https://tio.run/##DY05asNgEIWvkipIaCJmn/mL5CJCRYyRUWEhvBTG5OzKwGve8vFuz9PrWL6Pr5/tPSEwkAEjAUdDkOZpYIkSBKTpYs4gqNrSFKHqQFMmKSy4NSflMMhKkK0ZGimwhRTAJdLiCcUtULLAUKEASULGmnFduKIH7FCOQzyaJCtGprrrPG3zeF4v6@PebQP1f8f@0dE4kvbj9XfvPpd@mJaJfJ6Pfw" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
 <p>Still hardcoded but faster.</p>
 </div>
-<div id="pu2" class="pu"><h2>Julia, 253 bytes</h2>
+<div id="pu3" class="pu"><h2>Julia, 253 bytes</h2>
 <p>We restrict ourselves to cases n &lt;= 16 because a solution exists only in these cases. (Bubbler gives the proof in the comments.)</p>
 <pre><code>using Combinatorics;P=[[],[],[2],[3],[2],[5],[2,3],[7],[2],[3],[2,5],[11],[2,3],[13],[2,7],[2,3],[2]];f(n)=for s in permutations(collect(0:n)) d(k,p)=k&gt;n+1 ? false : s[k]%p==0; all(all(d(i,p)!=d(i+2,p) for p in P[s[i+1]+1]) for i in 1:n) &amp;&amp; return s end
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 163 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 163 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=(n,i=0,...p)=&gt;1/p[n]?p.every((v,j)=&gt;!j||v&lt;2|p.every((u,k)=&gt;k&gt;1&amp;&amp;v%k&lt;!f[f[-~j*k]=k]?p[j-1]%k&lt;1^p[j+1]%k&lt;1:1))&amp;&amp;p:!p.includes(i)&amp;&amp;f(n,0,...p,i)||i-n&amp;&amp;f(n,1+i,...p)
 </code></pre>
 <p><a href="https://tio.run/##fY/NisMgFIX3fQqzmKCNOrXLNrYPElIoqQ5qUMmPMNTJq2duCXQxi1ndwweH@x17T/exG0ycmA8Pta5aYk@NPFDOeSTyIj5j49tr5Cqp4RvjRC3Qwuac6mN@45k6wO4iyjJ9uLrQjW7YYveulQ7ajWWiBS5uEKstngQhZRlPReTGd/38UCM2QDQIbO@pITkb5jcmKrNJrToMuFcT8kgicYZTwz1AqCqCnjuEuuDH0Cvehy8oImgTct79rBZ2JQkKLYUFrwF/F7zlwX1hC@gL@s@AXw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Store non-prime in <code>f</code></p>
-</div>
-<div id="pu4" class="pu"><h1>JavaScript (ES7), 178 bytes</h1>
-<p>A quick attempt during my vacation. No time to golf this further.</p>
-
-<pre class="lang-javascript prettyprint-override"><code>f=(n,m=(o=0,2**n-1),...p)=&gt;m?(n=i=&gt;m&gt;&gt;i?n(-~i,m&amp;1&lt;&lt;i&amp;&amp;f(0,m^1&lt;&lt;i,...p,i)):o)(0):p.every((v,i)=&gt;(g=k=&gt;k&gt;v?1:v%k?g(k+1):(!(p[i-1]%k)^((q=p[i+1])+1&amp;&amp;!(q%k)))&amp;g(k,v/=k))(2))&amp;!o?o=p:o
-</code></pre>
-<p><a href="https://tio.run/##HY/BbsIwEETvfIVzwNoljhtzDFn7QyqQEHUik8Q2AVmqqvbX021P781oLnO/luvztob8amL68Ns2EES1ECRq1fFwiI1BpbXOSHZxECkwrQ0uQvMT1CJN3wcpB2jVcvnz/7EKiF1CaLHL2he/fgIULsnCSBPZyRZnurKf3AhTbbCDCvJ7aMx5P@EF4EGcanPG2khZwYNbRMlbVd6IHY4cq@QS5S5tQ1ph9i8RBQlzYvTMlqWuUXzthLil@Eyz13Ma@ZwYICKedt/bLw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu5" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <s>106</s> 105 bytes</h1>
 <pre><code>ＮθＦ…²φＦ⬤υ﹪ικ⊞υι≔Ｅ⊕θΦυ∧ι¬﹪ιλη≔Ｅη⟦κι⟦⟧⟧ζＦζ«≔⊟ιδ≔⊟ιεＦ⊕θ¿¬∨№ικ⊙ε﹪κλ¿⬤δ﹪κλ⊞ζ⁺⁺⟦κ⟧ι⎇§ι⁰⟦⁻§ηκεε⟧⟦⟦⟧§ηκ⟧»Ｉ⌊Φζ›Ｌιθ
