--- a/q/274829.html
+++ b/q/274829.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>012</td><td>Haskell</td><td>240809T131732Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274852#274852">Wheat Wi</a></td></tr>
+<tr d-ix="0"><td>012</td><td>Haskell + hgl</td><td>240809T131732Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274852#274852">Wheat Wi</a></td></tr>
 <tr d-ix="1"><td>015</td><td>APLDyalog Unicode</td><td>240809T112053Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274850#274850">akamayu</a></td></tr>
 <tr d-ix="2"><td>013</td><td>Retina 0.8.2</td><td>240809T062355Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274837#274837">Neil</a></td></tr>
 <tr d-ix="3"><td>005</td><td>Nekomata + e</td><td>240809T064132Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274839#274839">alephalp</a></td></tr>
@@ -37,7 +37,7 @@
 <tr d-ix="8"><td>9375</td><td>Vyxal</td><td>240809T012419Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274831#274831">lyxal</a></td></tr>
 <tr d-ix="9"><td>028</td><td>JavaScript Node.js</td><td>240809T011815Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274830#274830">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a>, 12 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, 12 bytes</h1>
 <pre><code>ay cr&lt;xqB st
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m708I7E4OzUnZ8FNxczcgvyiEoXC0sSczLTM1BSFgKLUnNKUVC6oRMDS0pI0XYt1abaJlQrJRTYVhU4KxSUQwZt1uYmZeQq2Cin5XAoKufEKGgVFCjYKaZpAnkK0QrSGerq6jkKIpo4ChOUEZmWAxWJBanRAapLgapLQZDJQ9EBYiQg1sRBXLFgAoQE" rel="nofollow noreferrer">Attempt This Online!</a></p>
