--- a/q/274854.html
+++ b/q/274854.html
@@ -26,15 +26,15 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>089</td><td>JavaScript ES6</td><td>240809T162406Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274857#274857">Arnauld</a></td></tr>
+<tr d-ix="0"><td>090</td><td>JavaScript ES6</td><td>240809T162406Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274857#274857">Arnauld</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 89 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES6), 90 bytes</h1>
 <p>Expects <code>(base)(list)</code>. Returns zero for truthy or non-zero for falsy.</p>
 <p>Too many recursive functions...</p>
 
-<pre class="lang-javascript prettyprint-override"><code>(b,i=0)=&gt;g=a=&gt;a+a&amp;&amp;(G=(x,y)=&gt;y?G(y,x%y):(h=v=&gt;v?v+h(v/b|0):g(a))(i*a.pop()/x))(++i,b-1)%b
+<pre class="lang-javascript prettyprint-override"><code>(b,i=0)=&gt;g=a=&gt;a+a&amp;&amp;(G=(x,y)=&gt;y?G(y,x%y):(h=v=&gt;v&amp;&amp;v+h(v/b|0))(i*a.pop()/x)+g(a))(++i,b-1)%b
 </code></pre>
-<p><a href="https://tio.run/##lY7NCoJAFEb3PYZQ3JtXc7L/GNvlC7SzFmM/aogjWYMDvbsN0aKgopbfd87iHIUS1faUlWenkLt9c@ANxJRxD3mQcMEDYYtOB0IONWnz6UUImuq2xhmkXPFALZSdgurFVw9nCQhEyLrCLWUJ2KvNsu2MYodhO262sqhkvndzmYAVrU6Xc6o3Fs5bz@AArI8QMRoQ2yC@Y2Ni1CffGEMa0ZgmNCXmEfvkG/bQ3wjMCC/8RbDWRbQUefW98@9S70PIj6X@nTc3" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##lY5LDoIwFAD3HoNE8p59KvX/SXGnF3CHLgoqYAglog1NvDs2xoUmanQ7M4s5Si3L6JQW53audvv6IGoIKRUeCj8WUviSSdeFlYCKjGVmsQJDVdPgDBKhha9dV7MEdDe8eoiQtmSnUAVgt0IWg7SIsZTCNsdmWEcqL1W272QqBidYny7nxGwdnDeexQF4DyHgNCC@RXznxsSpR31bDGlEY5rQlLhH/FNv3SN/E3AbvPiXwNnkwVJm5ffPv0@9DyM/nvbvvr4B" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
 
 <table id="st">
