--- a/q/274775.html
+++ b/q/274775.html
@@ -26,20 +26,20 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>101</td><td>Swift</td><td>240809T175534Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274859#274859">TKDKid10</a></td></tr>
-<tr d-ix="1"><td>121</td><td>C MSVC</td><td>240809T171705Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274858#274858">jdt</a></td></tr>
-<tr d-ix="2"><td>087</td><td>Kotlin script mode</td><td>240809T161904Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274855#274855">InSync</a></td></tr>
-<tr d-ix="3"><td>067</td><td>PowerShell</td><td>240808T070148Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274793#274793">user3141</a></td></tr>
-<tr d-ix="4"><td>085</td><td>Perl 5</td><td>240809T091532Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274846#274846">Dom Hast</a></td></tr>
-<tr d-ix="5"><td>058</td><td>PARI/GP</td><td>240809T091007Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274845#274845">alephalp</a></td></tr>
-<tr d-ix="6"><td>062</td><td>Lua</td><td>240809T085127Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274844#274844">ouflak</a></td></tr>
-<tr d-ix="7"><td>198</td><td>Progress Openedge ABL</td><td>240809T081903Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274843#274843">Crelda</a></td></tr>
-<tr d-ix="8"><td>270</td><td>Haskell</td><td>240809T074754Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274841#274841">Rocko</a></td></tr>
-<tr d-ix="9"><td>134</td><td>C++ GCC</td><td>240808T051944Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274785#274785">bb94</a></td></tr>
-<tr d-ix="10"><td>065</td><td>Lua</td><td>240808T165430Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274811#274811">chunes</a></td></tr>
-<tr d-ix="11"><td>249</td><td>VBScript</td><td>240808T084948Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274798#274798">Neil</a></td></tr>
-<tr d-ix="12"><td>047</td><td>Japt</td><td>240808T190204Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274816#274816">Shaggy</a></td></tr>
-<tr d-ix="13"><td>058</td><td>gnuplot</td><td>240808T164957Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274809#274809">int 21h </a></td></tr>
+<tr d-ix="0"><td>058</td><td>gnuplot</td><td>240808T164957Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274809#274809">int 21h </a></td></tr>
+<tr d-ix="1"><td>101</td><td>Swift</td><td>240809T175534Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274859#274859">TKDKid10</a></td></tr>
+<tr d-ix="2"><td>121</td><td>C MSVC</td><td>240809T171705Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274858#274858">jdt</a></td></tr>
+<tr d-ix="3"><td>087</td><td>Kotlin script mode</td><td>240809T161904Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274855#274855">InSync</a></td></tr>
+<tr d-ix="4"><td>067</td><td>PowerShell</td><td>240808T070148Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274793#274793">user3141</a></td></tr>
+<tr d-ix="5"><td>085</td><td>Perl 5</td><td>240809T091532Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274846#274846">Dom Hast</a></td></tr>
+<tr d-ix="6"><td>058</td><td>PARI/GP</td><td>240809T091007Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274845#274845">alephalp</a></td></tr>
+<tr d-ix="7"><td>062</td><td>Lua</td><td>240809T085127Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274844#274844">ouflak</a></td></tr>
+<tr d-ix="8"><td>198</td><td>Progress Openedge ABL</td><td>240809T081903Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274843#274843">Crelda</a></td></tr>
+<tr d-ix="9"><td>270</td><td>Haskell</td><td>240809T074754Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274841#274841">Rocko</a></td></tr>
+<tr d-ix="10"><td>134</td><td>C++ GCC</td><td>240808T051944Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274785#274785">bb94</a></td></tr>
+<tr d-ix="11"><td>065</td><td>Lua</td><td>240808T165430Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274811#274811">chunes</a></td></tr>
+<tr d-ix="12"><td>249</td><td>VBScript</td><td>240808T084948Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274798#274798">Neil</a></td></tr>
+<tr d-ix="13"><td>047</td><td>Japt</td><td>240808T190204Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274816#274816">Shaggy</a></td></tr>
 <tr d-ix="14"><td>065</td><td>Wolfram Language Mathematica</td><td>240808T073220Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274795#274795">att</a></td></tr>
 <tr d-ix="15"><td>077</td><td>Google Sheets</td><td>240808T094632Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274800#274800">doubleun</a></td></tr>
 <tr d-ix="16"><td>068</td><td>Ruby</td><td>240808T075112Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274796#274796">G B</a></td></tr>
@@ -49,7 +49,19 @@
 <tr d-ix="20"><td>071</td><td>JavaScript Node.js</td><td>240808T030639Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274781#274781">noodle p</a></td></tr>
 <tr d-ix="21"><td>068</td><td>Python</td><td>240808T013510Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274777#274777">Albert.L</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.swift.org/" rel="nofollow noreferrer">Swift</a>, 101 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="http://www.gnuplot.info/" rel="nofollow noreferrer">gnuplot</a>, 58 bytes</h1>
+<pre><code>length=&quot;\r24 hours&quot;
+day = &quot;Monday&quot;
+x = day.length
+print(x)
+</code></pre>
+<p><a href="https://tio.run/##S88rLcjJL/lfnKpQUKSkq/Q/JzUvvSTDVimmyMhEISO/tKhYiSslsVLBVkHJNz8PyFLiqgBygAw9iFKugqLMvBKNCs3//wE" rel="nofollow noreferrer" title="gnuplot – Try It Online">Try it online!</a> (Note that due to a bug, the output from both TIO and gnuplot.io is different from the output produced on a local Windows machine, see the screenshot below.)</p>
+<h4>How this works:</h4>
+<p>The dot operator concatenates two strings. This way the string x contains <code>&quot;Monday\r24 hours&quot;</code>. When printing x, first &quot;Monday&quot; appears, then the symbol <code>\r</code> (carriage return without linefeed) moves the cursor to the start of the same line and then printing &quot;24 hours&quot; over the string &quot;Monday&quot; overwrites it.</p>
+<p><a href="https://i.sstatic.net/gY4vz6fI.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/gY4vz6fI.png" alt="enter image description here" /></a></p>
+<p><strong>Edit:</strong> since this answer has received so many upvotes, I have decided to try and print the string <code>&quot;Monday\r24 hours&quot;</code> from the Linux OS. The result in Python can be checked online <a href="https://onlinegdb.com/Fy-zCnfDZ" rel="nofollow noreferrer">here</a>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.swift.org/" rel="nofollow noreferrer">Swift</a>, 101 bytes</h1>
 <p>Assuming I am allowed to answer my own question...</p>
 <pre class="lang-swift prettyprint-override"><code>extension String{var length:String{&quot;24 hours&quot;}}
 var x=&quot;&quot;,day=x
@@ -59,7 +71,7 @@ print(x)
 </code></pre>
 <p>The Swift compiler on tio.run doesn't support Swift v6.0 implicit returning, but a different one does. <a href="https://www.programiz.com/online-compiler/8nSZQ2XKjmsBq" rel="nofollow noreferrer">Try it here</a>.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://learn.microsoft.com/en-us/cpp/?view=msvc-170" rel="nofollow noreferrer">C (MSVC)</a>, 121 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://learn.microsoft.com/en-us/cpp/?view=msvc-170" rel="nofollow noreferrer">C (MSVC)</a>, 121 bytes</h1>
 
 <pre class="lang-c prettyprint-override"><code>#define day /##/
 #define x /##/
@@ -72,7 +84,7 @@ int main() {
 </code></pre>
 <p><a href="https://godbolt.org/z/d355T4jGr" rel="nofollow noreferrer">Try in GodBolt</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://kotlinlang.org" rel="nofollow noreferrer">Kotlin</a> (script mode), 87 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://kotlinlang.org" rel="nofollow noreferrer">Kotlin</a> (script mode), 87 bytes</h1>
 <pre class="lang-kotlin prettyprint-override"><code>val print={_:Int-&gt;print(&quot;24 hours&quot;)}
 var x=0
 val day = &quot;Monday&quot;
@@ -82,7 +94,7 @@ print(x)
 <p><a href="https://tio.run/##y84vycnM@59WmqeQm5iZp6GpUP2/LDFHoaAoM6/EtjreyjOvRNcOzNNQMjJRyMgvLSpW0qzlKkssUqiwNeACKU5JrFSwVVDyzc8DspS4KoAcIEMvJzUvvSSDC6K5QvN/7X8A" rel="nofollow noreferrer">Try it online!</a></p>
 <p>A port of <a href="https://codegolf.stackexchange.com/a/274781">@noodleperson's JS answer</a>.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/TryItOnline/TioSetup/wiki/Powershell" rel="nofollow noreferrer">PowerShell</a>, 67 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/TryItOnline/TioSetup/wiki/Powershell" rel="nofollow noreferrer">PowerShell</a>, 67 bytes</h1>
 
 <pre class="lang-powershell prettyprint-override"><code>filter print{'24 hours'}
 $day = &quot;Monday&quot;
@@ -104,7 +116,7 @@ return &quot;24 hours&quot;;}}'
 <p><a href="https://tio.run/##NYyxDsIgFEV3vuKFpe2gg3EqcXDXzc04IJBCQoAA1TaEb8cXrcNNzs09ucG/VUxaWdvaWcrdbQ0KujA/rREgLE8JREmZZ6wvbySEaFzuMbAMpcJmbkbKuE4g@6H8ka/sKzOCCCegV@@QKCMLNqT9Rbkpa0Z@z8vASFR5jg7o4QjazzFRVmtH7uIxjnjd2gc" rel="nofollow noreferrer" title="PowerShell – Try It Online">Try it online!</a></p>
 <p>This takes the original code as C# and compiles it into a class <code>c</code> that can be used by PowerShell. Some further golfing of the C# might be possible ...</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 85 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 85 bytes</h1>
 
 <pre class="lang-perl prettyprint-override"><code>sub day:lvalue{$x="24 hours"}sub x:lvalue{$x}
 day = "Monday";
@@ -114,7 +126,7 @@ print(x)</code></pre>
 <h2>Explanation</h2>
 <p>Works by defining two <a href="https://perldoc.perl.org/perlsub#Lvalue-subroutines" rel="nofollow noreferrer"><code>lvalue</code> <code>sub</code>routines</a> which can be assigned to, <code>day</code> and <code>x</code>, with the desired value hardcoded to <code>&quot;24 hours&quot;</code> for <code>day</code>. <code>day.length</code> actually concatenates the output of <code>day</code> and <code>length</code> but since <code>$_</code> is undefined, <code>length</code> outputs <code>undef</code> which is coerced to the empty string.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://pari.math.u-bordeaux.fr" rel="nofollow noreferrer">PARI/GP</a>, 58 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://pari.math.u-bordeaux.fr" rel="nofollow noreferrer">PARI/GP</a>, 58 bytes</h1>
 <pre><code>a.length=&quot;24 hours&quot;
 day = &quot;Monday&quot;
 x = day.length
@@ -123,7 +135,7 @@ print(x)
 <p><a href="https://ato.pxeger.com/run?1=m728ILEoMz69YMGCpaUlaboWN60S9XJS89JLMmyVjEwUMvJLi4qVuFISKxVsFZR88_OALCWuCiAHyIAq5Cooyswr0ajQhJgANQhmIAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>PARI/GP's member function syntax is a bit weird. When we define a member function <code>a.length=&quot;24 hours&quot;</code>, we actually define a new function <code>_.length = (a) -&gt; &quot;24 hours&quot;</code>. This function is associated with <code>_.length</code> instead of <code>a</code>, so we can call it from any object, not just <code>a</code>.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://www.lua.org/" rel="nofollow noreferrer">Lua</a>, 62 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://www.lua.org/" rel="nofollow noreferrer">Lua</a>, 62 bytes</h1>
 
 <pre class="lang-lua prettyprint-override"><code>print=print(&quot;24 hours&quot;)
 day = &quot;Monday&quot;
@@ -132,7 +144,7 @@ print(x)
 </code></pre>
 <p><a href="https://tio.run/##yylN/P@/oCgzr8QWTGooGZkoZOSXFhUraXKlJFYq2Coo@ebnAVlKXBVADpChl5Oal16SwQVRX6H5/z8A" rel="nofollow noreferrer" title="Lua – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://www.progress.com/openedge/features/abl" rel="nofollow noreferrer">Progress Openedge ABL</a>, 198 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://www.progress.com/openedge/features/abl" rel="nofollow noreferrer">Progress Openedge ABL</a>, 198 bytes</h1>
 <pre><code>def var day as char.
 def var x as char.
 def temp-table day
@@ -149,7 +161,7 @@ print(x).
 <p><a href="https://abldojo.services.progress.com/?shareId=66b5c59c20add51d93a68a5a" rel="nofollow noreferrer">Try It</a><br />
 You may need to switch the dojo to run on v12.2.12 to avoid an error with the site</p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 270 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 270 bytes</h1>
 <pre class="lang-haskell prettyprint-override"><code>{-# LANGUAGE CPP #-}
 {-# LANGUAGE OverloadedRecordDot #-}
 {-# LANGUAGE DataKinds #-}
@@ -163,7 +175,7 @@ main=let
 </code></pre>
 <p><a href="https://play.haskell.org/saved/xidFgOH5" rel="nofollow noreferrer">Try it</a></p>
 </div>
-<div id="pu9" class="pu"><h1><a href="https://gcc.gnu.org" rel="nofollow noreferrer">C++ (GCC)</a>, <s>168</s> <s>135</s> 134 bytes</h1>
+<div id="pu10" class="pu"><h1><a href="https://gcc.gnu.org" rel="nofollow noreferrer">C++ (GCC)</a>, <s>168</s> <s>135</s> 134 bytes</h1>
 <p><em>Thanks to G B for −33 bytes.</em></p>
 <pre class="lang-cpp prettyprint-override"><code>#include&lt;cstdio&gt;
 #define print(Z)puts(&quot;24 hours&quot;);}
@@ -174,7 +186,7 @@ print(x)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m702uSCntBiE49OTkxcsWFpakqZrcbNNOTMvOac0JdUmubgkJTPfjks5JTUtMy9VoaAoM69EI0qzoLSkWEPJyEQhI7-0qFhJ07qWq7ikqDS5RMGx2lErJzUvvSTD2lEjOSOxSEuzurbWOjcxM09DEyhXocOVklipYKug5JufB2QpWXNVAHlAlh5UGxfEkgpNiGugjoI5DgA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu10" class="pu"><h1><a href="https://www.lua.org/" rel="nofollow noreferrer">Lua</a>, <sup><s>84</s></sup> 65 bytes</h1>
+<div id="pu11" class="pu"><h1><a href="https://www.lua.org/" rel="nofollow noreferrer">Lua</a>, <sup><s>84</s></sup> 65 bytes</h1>
 
 <pre class="lang-lua prettyprint-override"><code>day={length=&quot;24 hours&quot;}os.
 day = &quot;Monday&quot;
@@ -184,7 +196,7 @@ print(x)
 <p><a href="https://tio.run/##yylN/P8/JbHStjonNS@9JMNWychEISO/tKhYqTa/WI8LKKVgq6Dkm58HZClxVQA5QIYeRDFXQVFmXolGheb//wA" rel="nofollow noreferrer" title="Lua – Try It Online">Try it online!</a></p>
 <p>-19 thanks to Daniel Schepler</p>
 </div>
-<div id="pu11" class="pu"><h2>VBScript, <s>263</s> 249 bytes</h2>
+<div id="pu12" class="pu"><h2>VBScript, <s>263</s> 249 bytes</h2>
 <pre><code>class o
 public length
 property let day(x)
@@ -206,24 +218,12 @@ wscript.echo x.x
 </code></pre>
 <p><code>day</code> is a date function in VBScript. <code>print</code> is apparently also a function, but I don't know what it does. Wrapping everything in a class allows me to declare local properties to override them, so the only statement that actually achieves anything is <code>x = day.length</code>, which reads the <code>me.length</code> set earlier and returns it as the result of <code>x.x</code>, which we echo at the end of the script.</p>
 </div>
-<div id="pu12" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 47 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu13" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 47 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>8î`24 ÊÀsday = &quot;Monday&quot;
 x = day.length
 print(x)
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=OO5gMjQgysBzZGF5ID0gIk1vbmRheSIKeCA9IGRheS5sZW5ndGgKcHJpbnQoeCk" rel="nofollow noreferrer">Test it</a></p>
-</div>
-<div id="pu13" class="pu"><h1><a href="http://www.gnuplot.info/" rel="noreferrer">gnuplot</a>, 58 bytes</h1>
-<pre><code>length=&quot;\r24 hours&quot;
-day = &quot;Monday&quot;
-x = day.length
-print(x)
-</code></pre>
-<p><a href="https://tio.run/##S88rLcjJL/lfnKpQUKSkq/Q/JzUvvSTDVimmyMhEISO/tKhYiSslsVLBVkHJNz8PyFLiqgBygAw9iFKugqLMvBKNCs3//wE" rel="noreferrer" title="gnuplot – Try It Online">Try it online!</a></p>
-<p>Note that this has only been tested on a Windows computer (see the screenshot below) while the output in TIO is incorrect.</p>
-<h4>How this works:</h4>
-<p>The dot operator concatenates two strings. This way the string x contains <code>&quot;Monday\r24 hours&quot;</code>. When printing x, first &quot;Monday&quot; appears, then the symbol <code>\r</code> (carriage return without linefeed) moves the cursor to the start of the same line and then printing &quot;24 hours&quot; over the string &quot;Monday&quot; overwrites it.</p>
-<p><a href="https://i.sstatic.net/gY4vz6fI.png" rel="noreferrer"><img src="https://i.sstatic.net/gY4vz6fI.png" alt="enter image description here" /></a></p>
 </div>
 <div id="pu14" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 65 bytes</h1>
 <pre><code>print _^:=Print@&quot;24 hours&quot;
