--- a/q/274854.html
+++ b/q/274854.html
@@ -26,9 +26,16 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>090</td><td>JavaScript ES6</td><td>240809T162406Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274857#274857">Arnauld</a></td></tr>
+<tr d-ix="0"><td>016</td><td>Jelly</td><td>240809T183703Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274861#274861">Unrelate</a></td></tr>
+<tr d-ix="1"><td>090</td><td>JavaScript ES6</td><td>240809T162406Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274857#274857">Arnauld</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 90 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 16 bytes</h1>
+<pre><code>J:g¥’}U×ḷb§¥ƬṪS%
+</code></pre>
+<p><a href="https://tio.run/##y0rNyan8/9/LKv3Q0kcNM2tDD09/uGN70qHlh5YeW/Nw56pg1f@Hl@trRv7/Hx0dbaijYKKjYBirY2gUq8MVHW2uY6hjpGOsY6JjqmOmY65joWOpY2igYwlXAORA5eFCyCKGEEUQU4kw2NAAu8mGSCYbw0ViAQ" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
+<p>A less naive computation of the digital roots comes out a bit longer by having to special-case 0.</p>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES6), 90 bytes</h1>
 <p>Expects <code>(base)(list)</code>. Returns zero for truthy or non-zero for falsy.</p>
 <p>Too many recursive functions...</p>
 
