--- a/q/274854.html
+++ b/q/274854.html
@@ -33,7 +33,19 @@
 <pre><code>J:g¥’}U×ḷb§¥ƬṪS%
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8/9/LKv3Q0kcNM2tDD09/uGN70qHlh5YeW/Nw56pg1f@Hl@trRv7/Hx0dbaijYKKjYBirY2gUq8MVHW2uY6hjpGOsY6JjqmOmY65joWOpY2igYwlXAORA5eFCyCKGEEUQU4kw2NAAu8mGSCYbw0ViAQ" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
-<p>A less naive computation of the digital roots comes out a bit longer by having to special-case 0.</p>
+<p>A less naive computation of the digital roots comes out a bit longer by having to special-case 0. Inverted output: truthy (nonzero) if the checksum fails.</p>
+<pre><code>J                   1-indices from the start
+ :                  divided by
+  g¥                their GCDs with
+    ’}              B - 1
+      U             reversed
+       ×ḷ           times each N.
+            ƬṪ      Loop while unique:
+         b ¥        Convert each to base B
+          §         and sum each.
+              S     Sum
+               %    mod B.
+</code></pre>
 </div>
 <div id="pu1" class="pu"><h1>JavaScript (ES6), 90 bytes</h1>
 <p>Expects <code>(base)(list)</code>. Returns zero for truthy or non-zero for falsy.</p>
