--- a/q/274775.html
+++ b/q/274775.html
@@ -26,12 +26,12 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>145</td><td>Rust</td><td>240809T191202Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274863#274863">DPD-</a></td></tr>
-<tr d-ix="1"><td>058</td><td>gnuplot</td><td>240808T164957Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274809#274809">int 21h </a></td></tr>
-<tr d-ix="2"><td>101</td><td>Swift</td><td>240809T175534Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274859#274859">TKDKid10</a></td></tr>
-<tr d-ix="3"><td>121</td><td>C MSVC</td><td>240809T171705Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274858#274858">jdt</a></td></tr>
-<tr d-ix="4"><td>087</td><td>Kotlin script mode</td><td>240809T161904Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274855#274855">InSync</a></td></tr>
-<tr d-ix="5"><td>067</td><td>PowerShell</td><td>240808T070148Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274793#274793">user3141</a></td></tr>
+<tr d-ix="0"><td>067</td><td>PowerShell</td><td>240808T070148Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274793#274793">user3141</a></td></tr>
+<tr d-ix="1"><td>145</td><td>Rust</td><td>240809T191202Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274863#274863">DPD-</a></td></tr>
+<tr d-ix="2"><td>058</td><td>gnuplot</td><td>240808T164957Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274809#274809">int 21h </a></td></tr>
+<tr d-ix="3"><td>101</td><td>Swift</td><td>240809T175534Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274859#274859">TKDKid10</a></td></tr>
+<tr d-ix="4"><td>121</td><td>C MSVC</td><td>240809T171705Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274858#274858">jdt</a></td></tr>
+<tr d-ix="5"><td>087</td><td>Kotlin script mode</td><td>240809T161904Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274855#274855">InSync</a></td></tr>
 <tr d-ix="6"><td>085</td><td>Perl 5</td><td>240809T091532Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274846#274846">Dom Hast</a></td></tr>
 <tr d-ix="7"><td>058</td><td>PARI/GP</td><td>240809T091007Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274845#274845">alephalp</a></td></tr>
 <tr d-ix="8"><td>062</td><td>Lua</td><td>240809T085127Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274844#274844">ouflak</a></td></tr>
@@ -50,7 +50,30 @@
 <tr d-ix="21"><td>071</td><td>JavaScript Node.js</td><td>240808T030639Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274781#274781">noodle p</a></td></tr>
 <tr d-ix="22"><td>068</td><td>Python</td><td>240808T013510Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274777#274777">Albert.L</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Rust, 145 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/TryItOnline/TioSetup/wiki/Powershell" rel="nofollow noreferrer">PowerShell</a>, 67 bytes</h1>
+
+<pre class="lang-powershell prettyprint-override"><code>filter print{'24 hours'}
+$day = &quot;Monday&quot;
+$x = $day.length
+print($x)
+</code></pre>
+<p><a href="https://tio.run/##K8gvTy0qzkjNyfn/Py0zpyS1SKGgKDOvpFrdyEQhI7@0qFi9lkslJbFSwVZByTc/D8hS4lKpAPJAgno5qXnpJRlcYC0aKhWa//8DAA" rel="nofollow noreferrer" title="PowerShell – Try It Online">Try it online!</a></p>
+<p>This requires a modification to the original code by adding $ in front of the variables; functionally, I don't see any difference to the allowed adding of semicolons at the line ends, or replacing the &quot;=&quot; assignment operator with a different one.</p>
+<p>Straightforward: 'filter' is basically the same as 'function' (but with automatic pipeline processing, which is not the point here), but has only 6 instead of 8 characters. It will ignore any arguments and just return the static string '24 hours'.</p>
+<h1><a href="https://github.com/TryItOnline/TioSetup/wiki/Powershell" rel="nofollow noreferrer">PowerShell</a>, <s>167</s> 165 bytes</h1>
+<p><em>Found two spaces that could be removed</em></p>
+
+<pre class="lang-powershell prettyprint-override"><code>Add-Type 'public class c{static void print(int x){}public static string d(){string day;int x;
+day = &quot;Monday&quot;;
+x = day.Length;
+print(x);
+return&quot;24 hours&quot;;}}'
+[c]::d()
+</code></pre>
+<p><a href="https://tio.run/##NYyxDsIgFEV3vuKFpe2gg3EqcXDXzc04IJBCQoAA1TaEb8cXrcNNzs09ucG/VUxaWdvaWcrdbQ0KujA/rREgLE8JREmZZ6wvbySEaFzuMbAMpW7iJqSM4wSyH8of@cq@LiOIcAJ69Q6JMrJgQ9pflJuyZuR3vAyMRJXn6OjhCNrPMVFWa0fu4jGO@NzaBw" rel="nofollow noreferrer" title="PowerShell – Try It Online">Try it online!</a></p>
+<p>This takes the original code as C# and compiles it into a class <code>c</code> that can be used by PowerShell. Some further golfing of the C# might be possible ...</p>
+</div>
+<div id="pu1" class="pu"><h1>Rust, 145 bytes</h1>
 <pre class="lang-rs prettyprint-override"><code>macro_rules!x{($a:stmt;$b:tt=$c:expr;$e:stmt)=&gt;{$a;$b=();print!(&quot;24 hours&quot;)}}fn main(){let(day,x);x!{
 day = &quot;Monday&quot;;
 x = day.length;
@@ -64,7 +87,7 @@ x = ();
 print!(&quot;24 hours&quot;)
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="http://www.gnuplot.info/" rel="nofollow noreferrer">gnuplot</a>, 58 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="http://www.gnuplot.info/" rel="nofollow noreferrer">gnuplot</a>, 58 bytes</h1>
 <pre><code>length=&quot;\r24 hours&quot;
 day = &quot;Monday&quot;
 x = day.length
@@ -76,7 +99,7 @@ print(x)
 <p><a href="https://i.sstatic.net/gY4vz6fI.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/gY4vz6fI.png" alt="enter image description here" /></a></p>
 <p><strong>Edit:</strong> since this answer has received so many upvotes, I have decided to try and print the string <code>&quot;Monday\r24 hours&quot;</code> from the Linux OS. The result in Python can be checked online <a href="https://onlinegdb.com/Fy-zCnfDZ" rel="nofollow noreferrer">here</a>.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.swift.org/" rel="nofollow noreferrer">Swift</a>, 101 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.swift.org/" rel="nofollow noreferrer">Swift</a>, 101 bytes</h1>
 <p>Assuming I am allowed to answer my own question...</p>
 <pre class="lang-swift prettyprint-override"><code>extension String{var length:String{&quot;24 hours&quot;}}
 var x=&quot;&quot;,day=x
@@ -86,7 +109,7 @@ print(x)
 </code></pre>
 <p>The Swift compiler on tio.run doesn't support Swift v6.0 implicit returning, but a different one does. <a href="https://www.programiz.com/online-compiler/8nSZQ2XKjmsBq" rel="nofollow noreferrer">Try it here</a>.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://learn.microsoft.com/en-us/cpp/?view=msvc-170" rel="nofollow noreferrer">C (MSVC)</a>, 121 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://learn.microsoft.com/en-us/cpp/?view=msvc-170" rel="nofollow noreferrer">C (MSVC)</a>, 121 bytes</h1>
 
 <pre class="lang-c prettyprint-override"><code>#define day /##/
 #define x /##/
@@ -99,7 +122,7 @@ int main() {
 </code></pre>
 <p><a href="https://godbolt.org/z/d355T4jGr" rel="nofollow noreferrer">Try in GodBolt</a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://kotlinlang.org" rel="nofollow noreferrer">Kotlin</a> (script mode), 87 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://kotlinlang.org" rel="nofollow noreferrer">Kotlin</a> (script mode), 87 bytes</h1>
 <pre class="lang-kotlin prettyprint-override"><code>val print={_:Int-&gt;print(&quot;24 hours&quot;)}
 var x=0
 val day = &quot;Monday&quot;
@@ -108,28 +131,6 @@ print(x)
 </code></pre>
 <p><a href="https://tio.run/##y84vycnM@59WmqeQm5iZp6GpUP2/LDFHoaAoM6/EtjreyjOvRNcOzNNQMjJRyMgvLSpW0qzlKkssUqiwNeACKU5JrFSwVVDyzc8DspS4KoAcIEMvJzUvvSSDC6K5QvN/7X8A" rel="nofollow noreferrer">Try it online!</a></p>
 <p>A port of <a href="https://codegolf.stackexchange.com/a/274781">@noodleperson's JS answer</a>.</p>
-</div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/TryItOnline/TioSetup/wiki/Powershell" rel="nofollow noreferrer">PowerShell</a>, 67 bytes</h1>
-
-<pre class="lang-powershell prettyprint-override"><code>filter print{'24 hours'}
-$day = &quot;Monday&quot;
-$x = $day.length
-print($x)
-</code></pre>
-<p><a href="https://tio.run/##K8gvTy0qzkjNyfn/Py0zpyS1SKGgKDOvpFrdyEQhI7@0qFi9lkslJbFSwVZByTc/D8hS4lKpAPJAgno5qXnpJRlcYC0aKhWa//8DAA" rel="nofollow noreferrer" title="PowerShell – Try It Online">Try it online!</a></p>
-<p>This requires a modification to the original code by adding $ in front of the variables; functionally, I don't see any difference to the allowed adding of semicolons at the line ends, or replacing the &quot;=&quot; assignment operator with a different one.</p>
-<p>Straightforward: 'filter' is basically the same as 'function' (but with automatic pipeline processing, which is not the point here), but has only 6 instead of 8 characters. It will ignore any arguments and just return the static string '24 hours'.</p>
-<h1><a href="https://github.com/TryItOnline/TioSetup/wiki/Powershell" rel="nofollow noreferrer">PowerShell</a>, 167 bytes</h1>
-
-<pre class="lang-powershell prettyprint-override"><code>Add-Type 'public class c{static void print(int x){} public static string d(){string day;int x;
-day = &quot;Monday&quot;;
-x = day.Length;
-print(x);
-return &quot;24 hours&quot;;}}'
-[c]::d()
-</code></pre>
-<p><a href="https://tio.run/##NYyxDsIgFEV3vuKFpe2gg3EqcXDXzc04IJBCQoAA1TaEb8cXrcNNzs09ucG/VUxaWdvaWcrdbQ0KujA/rREgLE8JREmZZ6wvbySEaFzuMbAMpcJmbkbKuE4g@6H8ka/sKzOCCCegV@@QKCMLNqT9Rbkpa0Z@z8vASFR5jg7o4QjazzFRVmtH7uIxjnjd2gc" rel="nofollow noreferrer" title="PowerShell – Try It Online">Try it online!</a></p>
-<p>This takes the original code as C# and compiles it into a class <code>c</code> that can be used by PowerShell. Some further golfing of the C# might be possible ...</p>
 </div>
 <div id="pu6" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 85 bytes</h1>
 
