--- a/q/274829.html
+++ b/q/274829.html
@@ -43,7 +43,7 @@
 </code></pre>
 <p><a href="https://tio.run/##fVE7DsIwDN05RdWJSpGIL8HCxIiqDvlLqAeAY3AKDoLEtdKodpLGRUQZbL@X59fXu5vnZ4z@cf2@4ll83qfLcItxPIx9L8ZpEqlQvThKMZQaqNZ6BTqJrbH7FkQH1AZjEE@zylLaWEfvykXIO0cSOCYhFbTS2jdanIKHy@72@lAokLWgUNbPY23dkdG80triqBlBY8xaRc8YU/3IpokMeC6S2a258FAqZZ8L8FwKpZpkbgOef5SUbrpsD2z/DwrIbeoETws" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
 <p>Takes a list of variable names on the left and a list of their mutabilities on the right.</p>
-<pre><code> x      Replicate: remove immutable references, for a list of mutable references.
+<pre><code> x      Replicate: yield a list of only mutable references.
 f       Filter the *full* list of referenced names to those in that list.
   QƑ    Is every element of the filtered list unique?
 </code></pre>
