--- a/q/274775.html
+++ b/q/274775.html
@@ -60,17 +60,18 @@ print($x)
 <p><a href="https://tio.run/##K8gvTy0qzkjNyfn/Py0zpyS1SKGgKDOvpFrdyEQhI7@0qFi9lkslJbFSwVZByTc/D8hS4lKpAPJAgno5qXnpJRlcYC0aKhWa//8DAA" rel="nofollow noreferrer" title="PowerShell – Try It Online">Try it online!</a></p>
 <p>This requires a modification to the original code by adding $ in front of the variables; functionally, I don't see any difference to the allowed adding of semicolons at the line ends, or replacing the &quot;=&quot; assignment operator with a different one.</p>
 <p>Straightforward: 'filter' is basically the same as 'function' (but with automatic pipeline processing, which is not the point here), but has only 6 instead of 8 characters. It will ignore any arguments and just return the static string '24 hours'.</p>
-<h1><a href="https://github.com/TryItOnline/TioSetup/wiki/Powershell" rel="nofollow noreferrer">PowerShell</a>, <s>167</s> 165 bytes</h1>
-<p><em>Found two spaces that could be removed</em></p>
+<h1><a href="https://github.com/TryItOnline/TioSetup/wiki/Powershell" rel="nofollow noreferrer">PowerShell</a>, <s>167</s> <s>165</s> 185 bytes</h1>
+<p><em>Found two spaces that could be removed</em><br />
+<em>print now generates the output</em></p>
 
-<pre class="lang-powershell prettyprint-override"><code>Add-Type 'public class c{static void print(int x){}public static string d(){string day;int x;
+<pre class="lang-powershell prettyprint-override"><code>Add-Type 'using System;public class c{static void print(int x){Console.Write(&quot;24 hours&quot;);}public static void d(){string day;int x;
 day = &quot;Monday&quot;;
 x = day.Length;
 print(x);
-return&quot;24 hours&quot;;}}'
+}}'
 [c]::d()
 </code></pre>
-<p><a href="https://tio.run/##NYyxDsIgFEV3vuKFpe2gg3EqcXDXzc04IJBCQoAA1TaEb8cXrcNNzs09ucG/VUxaWdvaWcrdbQ0KujA/rREgLE8JREmZZ6wvbySEaFzuMbAMpW7iJqSM4wSyH8of@cq@LiOIcAJ69Q6JMrJgQ9pflJuyZuR3vAyMRJXn6OjhCNrPMVFWa0fu4jGO@NzaBw" rel="nofollow noreferrer" title="PowerShell – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##TY09C8IwFEX3/IpHlzaDHcSpwUFcdVJwEIeaBBuISchLtaX0t8fnx@Bw4dzhnhv8U0fstLU5b5RaHMegoezRuBscRkz6LkJ/tUaCtC0iyAlTm6g@vFEQonGposDAp6136K2uT9EkXRXLFXS@j1hwMf8U/1NVcVLF949qR/FxCEYIayj23hEVgg3UiOqddrfUCfY9HLhg81yys7w0DYlyfgE" rel="nofollow noreferrer" title="PowerShell – Try It Online">Try it online!</a></p>
 <p>This takes the original code as C# and compiles it into a class <code>c</code> that can be used by PowerShell. Some further golfing of the C# might be possible ...</p>
 </div>
 <div id="pu1" class="pu"><h1>Rust, 145 bytes</h1>
