--- a/q/274829.html
+++ b/q/274829.html
@@ -26,11 +26,11 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>009</td><td>APL Dyalog Unicode</td><td>240810T013030Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274869#274869">Unrelate</a></td></tr>
-<tr d-ix="1"><td>007</td><td>Jelly</td><td>240809T192243Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274865#274865">Jonathan</a></td></tr>
-<tr d-ix="2"><td>004</td><td>Jelly</td><td>240809T191805Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274864#274864">Unrelate</a></td></tr>
-<tr d-ix="3"><td>012</td><td>Haskell + hgl</td><td>240809T131732Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274852#274852">Wheat Wi</a></td></tr>
-<tr d-ix="4"><td>015</td><td>APLDyalog Unicode</td><td>240809T112053Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274850#274850">akamayu</a></td></tr>
+<tr d-ix="0"><td>014</td><td>APLDyalog Unicode</td><td>240809T112053Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274850#274850">akamayu</a></td></tr>
+<tr d-ix="1"><td>009</td><td>APL Dyalog Unicode</td><td>240810T013030Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274869#274869">Unrelate</a></td></tr>
+<tr d-ix="2"><td>007</td><td>Jelly</td><td>240809T192243Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274865#274865">Jonathan</a></td></tr>
+<tr d-ix="3"><td>004</td><td>Jelly</td><td>240809T191805Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274864#274864">Unrelate</a></td></tr>
+<tr d-ix="4"><td>012</td><td>Haskell + hgl</td><td>240809T131732Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274852#274852">Wheat Wi</a></td></tr>
 <tr d-ix="5"><td>013</td><td>Retina 0.8.2</td><td>240809T062355Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274837#274837">Neil</a></td></tr>
 <tr d-ix="6"><td>005</td><td>Nekomata + e</td><td>240809T064132Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274839#274839">alephalp</a></td></tr>
 <tr d-ix="7"><td>010</td><td>Charcoal</td><td>240809T063035Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274838#274838">Neil</a></td></tr>
@@ -40,7 +40,15 @@
 <tr d-ix="11"><td>9375</td><td>Vyxal</td><td>240809T012419Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274831#274831">lyxal</a></td></tr>
 <tr d-ix="12"><td>028</td><td>JavaScript Node.js</td><td>240809T011815Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274830#274830">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL (Dyalog Unicode)</a>, <sup><s></s></sup>9 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
+<div id="pu0" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup><strike>15</strike> 14 bytes<sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
+<p>A dfn that takes [mut,not mut ...] boolean array as its left argument, and takes the variable names as its right argument.</p>
+<p>Unique <code>∪</code> of the intersection <code>∩</code> between is_mutable <code>⍺</code> and the second or more appearance of variables  <code>~≠⍵</code> over the corresponding variable <code>⌿∘⍵</code>.</p>
+<pre><code>{∪⍺∩⍥(⌿∘⍵)~≠⍵}
+</code></pre>
+<p><a href="https://razetime.github.io/APLgolf/?h=AwA&amp;c=q37UsepR765HHSsf9S7VeNSz/1HHjEe9WzXrHnUuANK1AA&amp;f=lVE7bsMwDN11Cm1MgQQlj2RZti@QLcgUIEMAF0WB3KFD1ywZcxSdpKQZOSL8KUobgvDe4yNF7tP50x/S5XRI/X0LHrapvx3fU399fDPioQXPiOfz/MXnhsGWgbejY/zHT2MvuPM4S0EFcnGe1mnOxhk6BND7oqKOo4JL0LoCB4V1EkVX16YPNCJpM9SxgVxFOTIebdNEmFbJUvHoQhUCj3dSZfhFofFSUHairJA@2o4V6ePKm4Td3wHSM87PVQrREkXLFBpSGotxXDQuU1TkKVXBaIhm4oaiksrrckOGofIW3NMuC4rxuwJGO/dXh/qtU51GYahv0zXxD@O78kzUUJL@t8Bf&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
+<p><a href="https://razetime.github.io/APLgolf/?h=AwA&amp;c=q37UsUrjUe@uRz37H/Vu1XzUsRJIgTkr6h51LgByagE&amp;f=lZFNjsIwDIX3OUV2LlIR8ZGa/l2AHWKFxGKkotFI3GEWs2UzyzlKToJd4xJPKQi3iiK/L8@JvU3HT79LH4ddGn5L8FCm4bLfpOH8900ZDx14ynhaj1@0FpTsKLHaO8r/@HlsOe98eCgVJVSw4r3z@JIgjzAnIEaQ/SJRNxNBVfA5EUbCOjHR1zXkVYKBiKhi3bSgVURD49G1bQPzKoqyRx@rGKnJsyrjz4TEnUB1QiX4Hl1PRDqdaZ6wfh3Adw6P@8qFcEnCZSkYkS/W6OvRWP6TMDsnUgWTYTAdNxLmko7LjSeMpFNwNzsFsva7LB1s3@83lO@51EtkhvI2GRP9ML1LeyKGfOi9AV4B&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf! 15 bytes</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL (Dyalog Unicode)</a>, <sup><s></s></sup>9 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
 <pre><code>/∧/⍤≠⍤∩⍨⊢
 </code></pre>
 <p><a href="https://razetime.github.io/APLgolf/?h=AwA&amp;c=03/UsVz/Ue@SR50LQGTHyke9Kx51LQIA&amp;f=lZFNjsIwDIX3OUV2LlIR8ZGa/l2AHWKFxGKkotFI3GEWs2UzyzlKToJd4xJPKQi3iiK/L8@JvU3HT79LH4ddGn5L8FCm4bLfpOH8900ZDx14ynhaj1@0FpTsKLHaO8r/@HlsOe98eCgVJVSw4r3z@JIgjzAnIEaQ/SJRNxNBVfA5EUbCOjHR1zXkVYKBiKhi3bSgVURD49G1bQPzKoqyRx@rGKnJsyrjz4TEnUB1QiX4Hl1PRDqdaZ6wfh3Adw6P@8qFcEnCZSkYkS/W6OvRWP6TMDsnUgWTYTAdNxLmko7LjSeMpFNwNzsFsva7LB1s3@83lO@51EtkhvI2GRP9ML1LeyKGfOi9AV4B&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=train&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
@@ -55,7 +63,7 @@
 </code></pre>
 <p>10 bytes as a dfn: <code>{∧/≠⍵∩⍺/⍵}</code></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s> 9 </s> 7 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s> 9 </s> 7 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <p>-2 building upon <a href="https://codegolf.stackexchange.com/users/85334/unrelated-string">UnrelatedString's</a> suggested eight, <code>ṢƙṪ€UḄḂƑ</code>.</p>
 <pre><code>ṢƙṪ€SḊẸ
 </code></pre>
@@ -72,7 +80,7 @@
       Ẹ - any?
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="noreferrer">Jelly</a>, 4 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="noreferrer">Jelly</a>, 4 bytes</h1>
 <pre><code>fxQƑ
 </code></pre>
 <p><a href="https://tio.run/##fVE7DsIwDN05RdWJSpGIL8HCxIiqDvlLqAeAY3AKDoLEtdKodpLGRUQZbL@X59fXu5vnZ4z@cf2@4ll83qfLcItxPIx9L8ZpEqlQvThKMZQaqNZ6BTqJrbH7FkQH1AZjEE@zylLaWEfvykXIO0cSOCYhFbTS2jdanIKHy@72@lAokLWgUNbPY23dkdG80triqBlBY8xaRc8YU/3IpokMeC6S2a258FAqZZ8L8FwKpZpkbgOef5SUbrpsD2z/DwrIbeoETws" rel="noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -82,7 +90,7 @@ f       Filter the *full* list of referenced names to those in that list.
   QƑ    Is every element of the filtered list unique?
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, 12 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, 12 bytes</h1>
 <pre><code>ay cr&lt;xqB st
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m708I7E4OzUnZ8FNxczcgvyiEoXC0sSczLTM1BSFgKLUnNKUVC6oRMDS0pI0XYt1abaJlQrJRTYVhU4KxSUQwZt1uYmZeQq2Cin5XAoKufEKGgVFCjYKaZpAnkK0QrSGerq6jkKIpo4ChOUEZmWAxWJBanRAapLgapLQZDJQ9EBYiQg1sRBXLFgAoQE" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -95,13 +103,6 @@ f       Filter the *full* list of referenced names to those in that list.
 </ul>
 <h1>Reflection</h1>
 <p>This is pretty solid. I don't really thing there's anything that needs to be improved in hgl. However I should check if <code>ay cr</code> or <code>ay st</code> has been used before, if either of these has I think that would be justification to add both.</p>
-</div>
-<div id="pu4" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>15 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
-<p>A dfn that takes [mut,not mut ...] boolean array as its left argument, and takes the variable names as its right argument.</p>
-<p>Unique <code>∪</code> of intersection <code>∩</code> between mutable references <code>(⍺⌿⍵)</code> and the variables that appear more than once <code>⍵⌿⍨~≠⍵</code>.</p>
-<pre><code>{∪(⍺⌿⍵)∩⍵⌿⍨~≠⍵}
-</code></pre>
-<p><a href="https://razetime.github.io/APLgolf/?h=AwA&amp;c=q37UsUrjUe@uRz37H/Vu1XzUsRJIgTkr6h51LgByagE&amp;f=lZFNjsIwDIX3OUV2LlIR8ZGa/l2AHWKFxGKkotFI3GEWs2UzyzlKToJd4xJPKQi3iiK/L8@JvU3HT79LH4ddGn5L8FCm4bLfpOH8900ZDx14ynhaj1@0FpTsKLHaO8r/@HlsOe98eCgVJVSw4r3z@JIgjzAnIEaQ/SJRNxNBVfA5EUbCOjHR1zXkVYKBiKhi3bSgVURD49G1bQPzKoqyRx@rGKnJsyrjz4TEnUB1QiX4Hl1PRDqdaZ6wfh3Adw6P@8qFcEnCZSkYkS/W6OvRWP6TMDsnUgWTYTAdNxLmko7LjSeMpFNwNzsFsva7LB1s3@83lO@51EtkhvI2GRP9ML1LeyKGfOi9AV4B&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
 </div>
 <div id="pu5" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, <s>15</s> 13 bytes</h1>
 <pre><code>O`.#?
